<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Merger</string>
    <string name="title_activity_merge">Contact Merger</string>
    <string name="fa_check"></string>
    <string name="fa_times"></string>
    <string name="fa_ban"></string>
    <string name="fa_plus"></string>
    <string name="analyze_now">Analyze now</string>
    <string name="analyze_again">New analysis</string>
    <string name="analysis_progress">Analyzing your contacts.\nThis can take a few minutes.\n%1$d%%</string>
    <string name="contact_permission_required">Contact permission is required to analyze and merge contacts.</string>
    <string name="notification_analysis_title">Analyzing your contacts</string>
    <string name="notification_analysis_progress">%1$d%% complete</string>
    <string name="notification_analysis_complete_title">Contact analysis completed</string>
    <string name="notification_analysis_complete_body">%1$d contacts found</string>
    <string name="notification_channel_name">Contact analysis</string>
    <string name="notification_channel_description">Shows the progress of contact analysis.</string>
    <string name="contact_list_clean">Your contact list is clean. Congratulations!</string>
    <string name="no_logged_actions">No logged actions</string>
    <string name="action_label">Action</string>
    <string name="history_action_merged">Merged: %1$s</string>
    <string name="history_action_separated">Separated: %1$s</string>
    <string name="about">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_tagline">Find, review, and merge duplicate contacts.</string>
    <string name="about_creator_heading">Original creator</string>
    <string name="about_creator_body">René Treffer\nhttps://github.com/rtreffer\n\nOriginal project\nhttps://github.com/rtreffer/ContactMerger</string>
    <string name="about_fork_heading">This version</string>
    <string name="about_fork_body">AA-1.0-beta_3, by Alfly-Alyx.\nhttps://github.com/Alfly-Alyx/AA-ContactMerger</string>
    <string name="about_updates_heading">Changes from the original project</string>
    <string name="about_updates_body">• Compatibility extended from Android 6 to Android 16.\n• Duplicate analysis and an analysis button on the home screen.\n• Merge history and improved navigation.\n• Android 16 fixes for permissions, display, and progress.\n• Automatic adaptation to the system light or dark theme.\n• Text adapted to the phone language.</string>
    <string name="about_close">Back to home</string>
    <string name="project_about_message">Contact Merger AA-1.0-beta_3\n\nCreator: René Treffer\nhttps://github.com/rtreffer\n\nOriginal project:\nhttps://github.com/rtreffer/ContactMerger\n\nAA-1.0-beta_3 by Alfly-Alyx:\nhttps://github.com/Alfly-Alyx/AA-ContactMerger</string>
    <string name="back_to_main">← Back</string>
    <string name="action_log">Merge history</string>
    <string name="title_activity_log">Merge history</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
